Add right side of page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <title>Link-List</title>
 </head>
 <body>
-  <section class="left-side">
-    
-  </section>
+  <section class="left-side"></section>
+  <section class="right-side"></section>
 </body>
 </html>
