--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <button>Enter</button>
     <p>Kevin is tired</p>
     <p> this</p>
+    <p>that</p> 
   </section>
   <section class="right-side">RIGHT
     <article class="book-mark">
